--- a/include/themes/modern/main.css
+++ b/include/themes/modern/main.css
@@ -484,7 +484,6 @@ label {
 }
 
 .menuoptions li a:hover {
-	display:block;
 	background: linear-gradient(to bottom, rgba(242, 246, 248, 1) 0%, rgba(216, 225, 231, 1) 50%, rgba(181, 198, 208, 1) 51%, rgba(224, 239, 249, 1) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
 }
 
